# research_agent

./: .env  .gitignore  Readme.md
backend/: Dockerfile  alembic_setup.txt  config.py  crew.py  database.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/agents/: analyst.py  reader.py  researcher.py  writer.py
backend/alembic/: env.py
backend/alembic/versions/: 27f2ff2d5ef6_recreate_users_and_reports.py  3d633ffcc717_recreate_schema.py  65e052bf076f_add_current_agent_to_reports.py  8a9ceb4a433f_initial_schema.py  db4170c32c24_create_users_and_reports_tables.py
backend/auth/: email.py  models.py  router.py  schemas.py  service.py
backend/reports/: models.py  router.py  schemas.py
backend/tools/: search.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/forgot-password/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(auth)/reset-password/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/history/: page.tsx
frontend/app/reports/[id]/: page.tsx
frontend/app/settings/: layout.tsx  page.tsx
frontend/app/settings/profile/: page.tsx
frontend/components/: AgentProgress.tsx  AuthGuard.tsx  ErrorBoundary.tsx  NavBar.tsx  ReportViewer.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  textarea.tsx
frontend/lib/: api.ts  auth.ts  store.ts
