[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.6",
    "crewai-tools>=1.14.6",
    "fastapi>=0.136.3",
    "openai>=2.41.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "tavily-python>=0.7.25",
    "uvicorn>=0.49.0",
]
