[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "crewai>=1.14.6",
    "crewai-tools>=1.14.6",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.3",
    "jose>=1.0.0",
    "openai>=2.41.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "tavily-python>=0.7.25",
    "uvicorn>=0.49.0",
]
